tests/baselines/reference/classExtendsInterfaceInExpression.errors.txt
tests/cases/compiler/classExtendsInterfaceInExpression.ts(7,25): error TS2692: Cannot find name 'A'. A type exists with this name, but no value.


==== tests/cases/compiler/classExtendsInterfaceInExpression.ts (1 errors) ====
    interface A {}
    
    function factory(a: any): {new(): Object} {
      return null;
    }
    
    class C extends factory(A) {}
                            ~
!!! error TS2692: Cannot find name 'A'. A type exists with this name, but no value.
    